Avoid page break inside card component

--- a/_sass/_card.scss
+++ b/_sass/_card.scss
@@ -7,6 +7,7 @@ $border-color: darkgrey;
   border-radius: 3px;
   margin-bottom: $gutter;
   box-shadow: $border-color 1px 1px 6px;
+  page-break-inside: avoid;
 
   .card-thumbnail {
     align-self: center;
@@ -34,6 +35,7 @@ $border-color: darkgrey;
   border-radius: 3px;
   margin-bottom: $gutter;
   box-shadow: $border-color 1px 1px 6px;
+  page-break-inside: avoid;
 
   .card-group-header {
     border-bottom: 1px solid $border-color;
